[Local Screen Casting] Exit fullscreen when presentation display is removed

While presenting to a local display, if we remove the display with a
fullscreen presentation, the presentation can move to the display with
the controlling window while still being fullscreen and cover the
controlling window. This CL makes the presentation window exit
fullscreen in such cases.

Bug: 805139
Change-Id: I02c4234d95ee9477683550fdad454e1aee6b460b
Reviewed-on: https://chromium-review.googlesource.com/902889
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Derek Cheng <imcheng@chromium.org>
Commit-Queue: Takumi Fujimoto <takumif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540256}
Former-commit-id: 38dbe75ee11110c5cf146472f7e5f871e521b648