chrome/browser/ui/media_router/presentation_receiver_window_controller.cc
@@ -77,6 +77,10 @@ void PresentationReceiverWindowController::Terminate() {
   }
 }
 
+void PresentationReceiverWindowController::ExitFullscreen() {
+  window_->ExitFullscreen();
+}
+
 void PresentationReceiverWindowController::CloseWindowForTest() {
   window_->Close();
 }
